<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/near"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/near"/>
    <item
        android:id="@+id/neardest"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/dest"/>
    <item
        android:id="@+id/route"
        android:icon="@android:drawable/ic_menu_directions"
        android:title="@string/route"/>
    <item
        android:id="@+id/bus"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/bus"/>
    <item
        android:id="@+id/help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help"/>
    <item
        android:id="@+id/bus_l"
        android:title="@string/busl"/>
    <item
        android:id="@+id/bus_dest_l"
        android:title="@string/busdestl"/>
    <item
        android:id="@+id/refresh"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/update"
        android:title="@string/update"/>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"/>

</menu>